--- a/AndroidProject/app/src/main/res/layout/activity_update_task.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_update_task.xml
@@ -6,13 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".ui_controller.task.UpdateTaskActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/my_toolbar_update_tasks"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@android:color/transparent"
+        app:elevation="@dimen/toolbar_elevation"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/update_activity_edit_task_til"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/element_margin"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/my_toolbar_update_tasks">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/update_activity_edit_task_et"
