--- a/AndroidProject/app/src/main/res/layout/activity_main_single_task_layout.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_main_single_task_layout.xml
@@ -7,7 +7,7 @@
     android:foreground="?attr/selectableItemBackground"
     android:padding="16dp">
 
-    <RadioButton
+    <CheckBox
         android:id="@+id/select_task_rg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
